# highlight-reel

./: .gitignore  README.md  pyproject.toml
highlight_reel/: __main__.py  clipper.py
tests/: test_clipper.py
